--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,13 @@ body{
 
 header{
     border-bottom: 1px solid #33A8DB;
-    background-image: none;
     text-align: center;
-
+    
     background-image: linear-gradient(#00000080,#25759730, #00000080), url("/assets/images/banner.png");
+}
+
+section{
+    border-bottom: 1px solid #33A8DB;
 }
 
 h1{
@@ -26,6 +29,11 @@ h1{
 }
 
 h2{
+    text-transform: uppercase;
+    color: #33A8DB;
+}
+
+button span{
     color: #33A8DB;
 }
 
@@ -35,15 +43,51 @@ img{
 
 .banner-content{
     max-width: 40%;
-    margin: 60px auto;
+    margin: 0px auto;
+}
+
+.section-content{
+    max-width: 65%;
+    text-align: center;
+    margin: 70px auto;
+}
+
+.module-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+.module-button{
+    width: 500px;
+    height: 38px;
+    color: white;
+    background-color: #252525;
+    border: 1px solid #33A8DB;
+    border-radius: 20px;
+    box-shadow: -3px 3px 3px rgba(0, 0, 0, 0.74) inset;
+}
+
+#logo-dio-top{
+    margin-top: 50px;
 }
 
 #subscribe-button{
     width: 50%;
     height: 50px;
+    margin-bottom: 50px;
     color: #33A8DB;
     font-weight: bold;
     text-transform: uppercase;
-    border: 2px solid linear-gradient(#33A8DB, #1472B7);
+    border: 2px solid;
     background: transparent;
+}
+
+#change-text{
+    position:absolute;
 }
